--- a/html/search.html
+++ b/html/search.html
@@ -19,10 +19,10 @@
 <body>
     <div class="container mt-5">
         <div class="row">
-            <div class="col-9">
+            <div class="col-6">
                 <h1>G<i class="fas fa-home"></i>ffWiki</h1>
             </div>
-            <div class="col-3 text-right">
+            <div class="col-6 text-right">
                 <div class="header-button">
                     <button class="btn btn-primary" onclick="openReviewForm"><i class="fas fa-plus-circle"></i>
                         Review</button>
@@ -46,7 +46,7 @@
 
         <!-- Results Container -->
         <div id="searchResults" class="mt-4">
-            <div class="divider"></div>
+            <!-- <div class="divider"></div>
             <div class="card mb-3">
                 <a href="https://rb.gy/6gzq1">
                     <div class="card-body">
@@ -76,7 +76,7 @@
                         </p>
                     </div>
                 </a>
-            </div>
+            </div> -->
 
         </div>
 
