--- a/html/property.html
+++ b/html/property.html
@@ -15,6 +15,21 @@
     <!-- Custom css -->
     <link rel="stylesheet" href="../css/search.css">
     <link rel="stylesheet" href="../css/property.css">
+
+    <style>
+        .custom-divider {
+          display: flex;
+          align-items: center;
+          color: rgba(0, 0, 0, 0.3);
+        }
+      
+        .custom-divider::before,
+        .custom-divider::after {
+          content: "";
+          flex: 1;
+          border-bottom: 1px solid rgba(0, 0, 0, 0.2); /* Adjust the style and color of the divider line as needed */
+        }
+      </style>
 </head>
 
 <body>
@@ -197,7 +212,11 @@
 
 
 
-            <div class="divider"></div>
+            <div class="custom-divider">
+                <div class="text-center">
+                    <span>2022</span>
+                </div>
+            </div>
 
             
 
@@ -206,7 +225,7 @@
                 <div class="card-body review-heading">
                     <!-- FIXME: Get rid of card hover and add chevron animation -->
                     <h5 class="card-title">I thoroughly enjoyed my stay for 3 months in my airbnb</h5>
-                    <p class="card-text"><i class="fas fa-calendar"></i> Aug 2020 - Oct 2022</p>
+                    <p class="card-text"><i class="fas fa-calendar"></i> Aug 2020 - Oct 2021</p>
                     <p class="card-text mb-0">
                         <i class="fas fa-star"></i>4.2
                         <i class="fas fa-thumbs-up"></i>0
@@ -356,7 +375,11 @@
                 </div>
             </div>
 
-
+            <div class="custom-divider">
+                <div class="text-center">
+                    <span>2020</span>
+                </div>
+            </div>
 
 
 
