Property detials loading in and review data retrievable

--- a/html/property.html
+++ b/html/property.html
@@ -47,8 +47,10 @@
         </div>
 
         <!-- Search Form with Dropdown -->
-        <h4 class="card-title text-secondary">D08VW25</h4> <!-- FIXME: Add in a loc icon and google link-->
-        <p class="card-text">61 Cork street, St Catherine's</p>
+        <div class="property-details">
+            <h4 class="card-title text-secondary">D08VW25</h4>
+            <p class="card-text">61 Cork street, St Catherine's</p>
+        </div>
 
         <!-- Results Container -->
         <div id="searchResults row" class="mt-4">
@@ -404,10 +406,8 @@
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 
     <!-- Custom js -->
+    <script src="../js/components/property/property-component-builder.js"></script>
     <script src="../js/property.js"></script>
-    <!-- <script src="../js/data/search-data.js"></script>
-    <script src="../js/components/search-results.js"></script>
-    <script src="../js/search.js"></script> -->
 </body>
 
 </html>
