--- a/html/search.html
+++ b/html/search.html
@@ -19,15 +19,15 @@
 <body>
     <div class="container mt-5">
         <div class="row">
-            <div class="col-6">
+            <div class="col-12">
                 <h1>G<i class="fas fa-home"></i>ffWiki</h1>
             </div>
-            <div class="col-6 text-right">
+            <!-- <div class="col-6 text-right">
                 <div class="header-button">
                     <button class="btn btn-primary" onclick="openReviewForm"><i class="fas fa-plus-circle"></i>
                         Review</button>
                 </div>
-            </div>
+            </div> -->
         </div>
 
         <!-- Search Form with Dropdown -->
@@ -46,11 +46,22 @@
 
         <!-- Results Container -->
         <div id="searchResults" class="mt-4">
-            <!-- <div class="divider"></div>
+            <div class="divider"></div>
             <div class="card mb-3">
                 <a href="https://rb.gy/6gzq1">
                     <div class="card-body">
-                        <h5 class="card-title"><i class="fas fa-map-marker-alt"></i> D08VW25</h5>
+                        <div class="row">
+                            <div class="col-6">
+                                <h5 class="card-title"><i class="fas fa-map-marker-alt"></i> D08VW25</h5>
+                            </div>
+                            <div class="col-6 text-right">
+                                <div class="header-button">
+                                    <button class="btn btn-primary" onclick="openReviewForm"><i class="fas fa-plus-circle"></i>
+                                        Review</button>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- <h5 class="card-title"><i class="fas fa-map-marker-alt"></i> D08VW25</h5> -->
                         <p class="card-text"></i> 61 Cork St</p>
                         <p class="card-text">
                             <i class="fas fa-star-half-alt"></i> 2.1
@@ -76,7 +87,7 @@
                         </p>
                     </div>
                 </a>
-            </div> -->
+            </div>
 
         </div>
 
