Added review capabaility and better linking between pages

--- a/html/property.html
+++ b/html/property.html
@@ -21,11 +21,11 @@
     <div class="container mt-5">
         <div class="row">
             <div class="col-6">
-                <h1>G<i class="fas fa-home"></i>ffWiki</h1>
+                <a href="search.html"><h1>G<i class="fas fa-home"></i>ffWiki</h1></a>
             </div>
             <div class="col-6 text-right">
                 <div class="header-button">
-                    <button class="btn btn-primary" onclick="openReviewForm"><i class="fas fa-plus-circle"></i>
+                    <button class="btn btn-primary" onclick="openReviewForm()"><i class="fas fa-plus-circle"></i>
                         Review</button>
                 </div>
             </div>
