--- a/html/search.html
+++ b/html/search.html
@@ -20,7 +20,7 @@
     <div class="container mt-5">
         <div class="row">
             <div class="col-12">
-                <h1>G<i class="fas fa-home"></i>ffWiki</h1>
+                <a href="search.html"><h1>G<i class="fas fa-home"></i>ffWiki</h1></a>
             </div>
             <!-- <div class="col-6 text-right">
                 <div class="header-button">
@@ -46,7 +46,7 @@
 
         <!-- Results Container -->
         <div id="searchResults" class="mt-4">
-            <div class="divider"></div>
+            <!-- <div class="divider"></div>
             <div class="card mb-3">
                 <a href="https://rb.gy/6gzq1">
                     <div class="card-body">
@@ -61,7 +61,6 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- <h5 class="card-title"><i class="fas fa-map-marker-alt"></i> D08VW25</h5> -->
                         <p class="card-text"></i> 61 Cork St</p>
                         <p class="card-text">
                             <i class="fas fa-star-half-alt"></i> 2.1
@@ -87,7 +86,7 @@
                         </p>
                     </div>
                 </a>
-            </div>
+            </div> -->
 
         </div>
 
