--- a/html/review.html
+++ b/html/review.html
@@ -21,7 +21,7 @@
     <div class="container mt-5">
         <div class="row">
             <div class="col-6">
-                <h1>G<i class="fas fa-home"></i>ffWiki</h1>
+                <a href="search.html"><h1>G<i class="fas fa-home"></i>ffWiki</h1></a>
             </div>
         </div>
 
@@ -80,15 +80,41 @@
             }
         </style>
 
+<style>
+    .spinner {
+width: 50px;
+height: 50px;
+border: 6px solid #ccc;
+border-top: 6px solid #007bff;
+border-radius: 50%;
+animation: spin 2s linear infinite;
+margin: 0 auto;
+}
+
+.hide {
+    display: none;
+}
+
+@keyframes spin {
+0% { transform: rotate(0deg); }
+100% { transform: rotate(360deg); }
+}
+</style>
+
         <form>
-            <label for="eircode">Eircode:</label>
-            <input type="text" id="eircode" name="eircode" value="E5678" disabled="true">
+            <div id="property-details" class="hide">
+                <label for="eircode">Eircode:</label>
+                <input type="text" id="eircode" name="eircode" value="E5678" disabled="true">
+    
+                <label for="address">Address:</label>
+                <input type="text" id="address" name="address"
+                    value="22 Tivoli Terrace South, Dun Laoghaire, County Dublin, The united people's republic of greater Ireland"
+                    disabled="true">
+            </div>
 
-            <label for="address">Address:</label>
-            <input type="text" id="address" name="address"
-                value="22 Tivoli Terrace South, Dun Laoghaire, County Dublin, The united people's republic of greater Ireland"
-                disabled="true">
+            <div class="spinner" id="property-details-spinner">
 
+            </div>
             <!-- <input type="submit" value="Submit"> -->
         </form>
 
@@ -102,6 +128,14 @@
             <label for="address" class="mt-4">End date/Present:</label>
             <p>When did you move out of this property</p>
             <input type="date" class="form-control" id="end-date-input">
+
+            <label for="address" class="mt-4">Title</label>
+            <input type="text" class="form-control" id="title-input">
+
+            <label for="address" class="mt-4">Summary</label>
+            <!-- <input type="t" class="form-control" id="end-date-input"> -->
+            <textarea name="" rows="10" id="summary-input"></textarea>
+
             
             <form class="error-form">
                 <div class="no-form-errors" id="review-details-error-container">
